--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,8 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
-build_and_push_to_docker_hub:
+  # Собрать и отправить образ приложения на Docker Hub
+  build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -85,8 +86,8 @@ build_and_push_to_docker_hub:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: ваш-логин-на-docker-hub/taski_backend:latest 
-frontend_tests:
+          tags: annakot97/taski_backend:latest
+  frontend_tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -149,3 +150,4 @@ frontend_tests:
           push: true
           # Тут вместо username должен быть ваш логин на Docker Hub
           tags: annakot97/taski_gateway:latest
+  
